style.css
html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

.inner-column{
    display: flex;
    flex-direction: column;
}

.background-img{
    background-image: linear-gradient(rgba(4, 4, 36, 0.75), rgba(4, 4, 36, 0.75)), url("img/background.jpg");
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 750px;
}

.company-branding{
    display: flex;
}

.company-logo{
    width: 100%;
    max-width: 40px;
    height: 50px;
    padding-left: 35px;
    padding-right: 15px;
    padding-top: 35px;
}

.company-name{
    color: #ffffff;
    font-size: 30px;
    font-family: Roboto, sans-serif;
    font-weight: 500;
    text-transform: uppercase;
    margin: 0;
    padding-top: 45px;
}

.sec-1-inner-container{
    display: flex;
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 80px;
    padding-bottom: 85px;
}

.sec-1-text-container{
    justify-content: center;
    padding-right: 60px;
}

.sec-1-head-1{
    font-size: 50px;
    font-family: Roboto, sans-serif;
    font-weight: 500;
    color: #ffffff;
    margin: 0;
    padding-bottom: 30px;
}

.sec-1-head-2{
    font-size: 30px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    color: #ffffff;
    margin: 0;
}

.contact-form-container{
    display: flex;
    background-color: #ffffff;
    padding: 60px 40px 60px 40px;
}

.row{
    flex-direction: row;
}

.form-header-container{
    /* align-items: center; */
}

.input-container{
    /* align-items: center; */
}

.contact-form{
    width: 350px;
}

.contact-form-header{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    text-align: center;
    margin: 0;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 30px;
}

.input-box-1{
    width: 100%;
    height: 30px;
    font-size: 15px;
    padding: 0 0 0 10px;
    box-sizing: border-box;
    margin-bottom: 20px;
}

.input-box-2{
    width: 100%;
    height: 30px;
    font-size: 15px;
    padding: 0 0 0 10px;
    box-sizing: border-box;
    margin-bottom: 20px;
}

.input-box-3{
    width: 100%;
    height: 30px;
    font-size: 15px;
    padding: 0 0 0 10px;
    box-sizing: border-box;
    margin-bottom: 20px;
}

.input-box-4{
    width: 100%;
    height: 30px;
    font-size: 15px;
    padding: 0 0 0 10px;
    box-sizing: border-box;
    margin-bottom: 20px;
}

.submit-btn{
    background-color: #1d85ff;
    color: #ffffff;
    border: none;
    width: 100%;
    height: 55px;
    font-size: 15px;
    font-weight: bold;
}

.submit-btn:hover{
    transition-duration: 0.4s;
    background-color:#1b6dca;
}

.sec-2-container{
    background-color: #ffffff;
    border-color: #ffffff;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    padding-top: 60px;
    padding-bottom: 45px;
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

.sec-2-head-1{
    font-size: 40px;
    font-family: Roboto, sans-serif;
    font-weight: 700;
    color: #000000;
    margin: 0;
    padding-bottom: 30px;
    text-align: center;
}

.sec-2-par-1{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    line-height: 1.5;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-bottom: 30px;
    padding-left: 100px;
    padding-right: 100px;
}

.sec-2-img-container{
    display: flex;
    justify-content: center;
}

.evaluation-container{
    padding: 15px 30px 15px 30px;
}

.property-comps-container{
    padding: 15px 30px 15px 30px;
}

.report-container{
    padding: 15px 30px 15px 30px;
}

.no-strings-container{
    padding: 15px 30px 15px 30px;
}

.evaluation-img{
    width: 110px;
    height: 110px;
    margin: 0 auto;
    padding-bottom: 25px;
}

.property-comps-img{
    width: 110px;
    height: 110px;
    margin: 0 auto;
    padding-bottom: 25px;
}

.report-img{
    width: 110px;
    height: 110px;
    margin: 0 auto;
    padding-bottom: 25px;
}

.no-strings-img{
    width: 110px;
    height: 110px;
    margin: 0 auto;
    padding-bottom: 25px;
}

.sec-2-head-2{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    font-weight: 900;
    color: #000000;
    margin: 0;
    text-align: center;
}

.sec-3-container{
    background-color: #f2f2f2;
    border-color: #f2f2f2;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    padding-top: 60px;
    padding-bottom: 60px;
}

.sec-3-inner-container{
    background-color: #ffffff;
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 50px;
    padding-bottom: 50px;
}

.sec-3-head-1{
    font-size: 30px;
    font-family: Roboto, sans-serif;
    font-weight: 700;
    text-align: center;
    color: #000000;
    margin: 0;
    padding-bottom: 40px;
}

.quotes-img{
    display: block;
    margin: 0 auto;
    width: 30px;
    padding-bottom: 30px;
}

.sec-3-par-1{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    line-height: 1.5;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-bottom: 30px;
    padding-left: 100px;
    padding-right: 100px;
}

.sec-3-par-2{
    font-size: 15px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    line-height: 1.5;
    color: #000000;
    margin: 0;
    text-align: center;
}

.sec-4-container{
    background-color: #ffffff;
    border-color: #ffffff;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    padding-top: 60px;
    padding-bottom: 60px;
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

.sec-4-head-1{
    font-size: 40px;
    font-family: Roboto, sans-serif;
    font-weight: 700;
    text-align: center;
    color: #000000;
    margin: 0;
    padding-bottom: 20px;
}

.sec-4-par-1{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-bottom: 40px;
}

.sec-4-column-container{
    display: flex;
}

.sec-4-column{
    padding-left: 20px;
    padding-right: 20px;
}

.property-1-img{
    width: 250px;
    height: 250px;
    margin: 0 auto;
}

.property-2-img{
    width: 250px;
    height: 250px;
    margin: 0 auto;
}

.property-3-img{
    width: 250px;
    height: 250px;
    margin: 0 auto;
}

.sec-4-head-2{
    font-size: 20px;
    font-family: Roboto, sans-serif;
    font-weight: 700;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-top: 20px;
}

.sec-4-par-2{
    font-size: 18px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-top: 20px;
}

.sec-4-par-3{
    font-size: 15px;
    font-family: Roboto, sans-serif;
    font-weight: 300;
    color: #000000;
    margin: 0;
    text-align: center;
    padding-top: 20px;
}

